# vocab-estimator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  deploy.sh  docker-compose.infra.yml  docker-compose.yml  package.json  pnpm-lock.yaml  prepare-server.sh  pyproject.toml
apps/api/: Dockerfile  README.md
apps/api/migrations/: README.md  env.py  script.py.mako
apps/api/migrations/versions/: 20260622_0001_initial_schema.py  20260628_0002_add_student_name.py
apps/api/src/vocab_api/: __main__.py  config.py  database.py  main.py  models.py  repositories.py  schemas.py  services.py
apps/web/: Dockerfile  README.md  components.json  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  api.ts  index.css  main.tsx  state.tsx
apps/web/src/components/: app-shell.tsx  data-table.tsx  metric-card.tsx  page-header.tsx  result-card.tsx
apps/web/src/hooks/: use-adaptive-test.ts  (+1 more)
data/samples/: C.txt  F.txt  K.txt  P.txt  README.md
data/wordlists/: evaluation_wordlist.csv  word_rank.csv
docs/: adaptive-test-research.md  architecture-diagrams.md  course-report.md  education-wordlist-research.md  frontend-pages-redesign.md  technical-architecture-and-flow.md
reports/outputs/: learner_profiles.csv  stability.csv  stability_summary.csv  stability_summary.json  student_correlation.json  student_samples.csv  student_summary.csv  text_estimates.csv
tests/: test_api_app.py  test_docker_compose_config.py  test_estimator_core.py  test_experiments_tools.py  test_prepare_server_script.py
(+15 files in other folders)
