[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vocab-estimator"
version = "0.1.0"
description = "英语词汇量估算工具课程设计项目"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlmodel>=0.0.22",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = [
  "packages/estimator/src",
  "packages/experiments/src",
  "apps/api/src",
]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = [
  "packages/estimator/src",
  "packages/experiments/src",
  "apps/api/src",
]
